--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.15.2",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "qr-image": "^3.2.0",
     "serve-favicon": "~2.3.2"
   },
   "engines": {
